--- a/BlueprintFFmpeg.uplugin
+++ b/BlueprintFFmpeg.uplugin
@@ -14,6 +14,12 @@
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
 	"Installed": false,
+	"PreBuildSteps": {
+		"Mac": [
+			"chmod +x \"$(PluginDir)/PreBuild.sh\"",
+			"\"$(PluginDir)/PreBuild.sh\""
+		]
+	},
 	"Modules": [
 		{
 			"Name": "BlueprintFFmpeg",
